; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_sunvnet.c_prev_idx.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_sunvnet.c_prev_idx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vio_dring_state = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64, %struct.vio_dring_state*)* @prev_idx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @prev_idx(i64 %0, %struct.vio_dring_state* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca %struct.vio_dring_state*, align 8
  store i64 %0, i64* %3, align 8
  store %struct.vio_dring_state* %1, %struct.vio_dring_state** %4, align 8
  %5 = load i64, i64* %3, align 8
  %6 = icmp eq i64 %5, 0
  br i1 %6, label %7, label %12

7:                                                ; preds = %2
  %8 = load %struct.vio_dring_state*, %struct.vio_dring_state** %4, align 8
  %9 = getelementptr inbounds %struct.vio_dring_state, %struct.vio_dring_state* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = sub nsw i64 %10, 1
  store i64 %11, i64* %3, align 8
  br label %15

12:                                               ; preds = %2
  %13 = load i64, i64* %3, align 8
  %14 = add nsw i64 %13, -1
  store i64 %14, i64* %3, align 8
  br label %15

15:                                               ; preds = %12, %7
  %16 = load i64, i64* %3, align 8
  ret i64 %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
